--- a/package.json
+++ b/package.json
@@ -1,16 +1,16 @@
 {
-  "homepage": "https://www.caffeinesimulations.com",
+  "homepage": "https://caffeine-simulations.github.io/caffeine.simulations.github.io/",
   "name": "caffeine-sim-web",
   "private": true,
   "version": "0.0.1",
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "tsc && vite build",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview",
     "predeploy": "npm run build",
-    "deploy": "gh-pages -d build"
+    "deploy": "gh-pages -d build",
+    "build": "tsc && vite build"
   },
   "dependencies": {
     "bootstrap": "^5.3.2",
